@@ -7,23 +7,23 @@ def createMergeSource(basename):
     f.close()
 
 if CLIENTS:
-    fcatcmd=env.Program(target = 'fcatcmd',source=['fcatcmd.c']+client+common)
-    fcdcmd=env.Program(target = 'fcdcmd', source=['fcdcmd.c','printpro.c']+client+common)
-    fducmd=env.Program(target = 'fducmd', source=['fducmd.c']+client+common)
+    fcatcmd=env.Program(target = 'fcatcmd',source=['fcatcmd.c']+client+common+bsdfsp)
+    fcdcmd=env.Program(target = 'fcdcmd', source=['fcdcmd.c','printpro.c']+client+common+bsdfsp)
+    fducmd=env.Program(target = 'fducmd', source=['fducmd.c']+client+common+bsdfsp)
     ffindcmd=env.Program(target = 'ffindcmd',source=['ffindcmd.c']+client+common+bsdfsp)
     fget=env.StaticObject('fgetcmd.c', CPPDEFINES='-DCOMMAND_GET')
-    fgetcmd=env.Program(target = 'fgetcmd',source=fget+client+common)
-    fgrabcmd=env.Program(target = 'fgrabcmd',source=['fgrabcmd.c']+client+common)
+    fgetcmd=env.Program(target = 'fgetcmd',source=fget+client+common+bsdfsp)
+    fgrabcmd=env.Program(target = 'fgrabcmd',source=['fgrabcmd.c']+client+common+bsdfsp)
     fhostcmd=env.Program(target = 'fhostcmd',source=['fhostcmd.c','fhost.c','fspprof.l'])
     flscmd=env.Program(target = 'flscmd',source=['flscmd.c']+client+common+bsdfsp)
     fmkdircmd=env.Program(target = 'fmkdir',source=['fmkdir.c']+client+common)
-    fprocmd=env.Program(target = 'fprocmd',source=['fprocmd.c','printpro.c']+client+common)
+    fprocmd=env.Program(target = 'fprocmd',source=['fprocmd.c','printpro.c']+client+common+bsdfsp)
     fputcmd=env.Program(target = 'fput',source=['fput.c']+client+common)
-    frmcmd=env.Program(target = 'frmcmd',source=['frmcmd.c']+client+common)
-    frmdircmd=env.Program(target = 'frmdircmd',source=['frmdircmd.c']+client+common)
+    frmcmd=env.Program(target = 'frmcmd',source=['frmcmd.c']+client+common+bsdfsp)
+    frmdircmd=env.Program(target = 'frmdircmd',source=['frmdircmd.c']+client+common+bsdfsp)
     fvercmd=env.Program(target = 'fver',source=['fver.c']+client+common)
-    fstatcmd=env.Program(target = 'fstatcmd',source=['fstatcmd.c']+client+common)
-    fmvcmd=env.Program(target = 'fmvcmd',source=['fmvcmd.c']+client+common)
+    fstatcmd=env.Program(target = 'fstatcmd',source=['fstatcmd.c']+client+common+bsdfsp)
+    fmvcmd=env.Program(target = 'fmvcmd',source=['fmvcmd.c']+client+common+bsdfsp)
     fbyecmd=env.Program(target = 'fbye',source=['fbye.c']+client+common)
     fspsites=env.StaticObject('fspsites.l', LEXFLAGS='-Psite')
     fsetupcmd=env.Program(target = 'fsetupcmd',source=['fsetupcmd.c',fspsites,'fhost.c']+client+common)
