@@ -69,7 +69,7 @@ int main (int argc, char ** argv)
     {
 	key = *++argv;
 	while(*++argv) {
-	  if(!(av = glob(*argv))) {
+	  if(!(av = bsdglob(*argv))) {
 	    av = av2;
 	    av2[0] = *argv;
 	    av2[1] = 0;
@@ -81,7 +81,7 @@ int main (int argc, char ** argv)
   } else {
     /* get pro command */  
     if(argv[1]) while(*++argv) {
-      if(!(av = glob(*argv))) {
+      if(!(av = bsdglob(*argv))) {
 	av = av2;
 	av2[0] = *argv;
 	av2[1] = 0;
