@@ -2,6 +2,6 @@
 #define _FSP_BSD_EXTERN_H_ 1
 
 /* glob.c */
-char **glob (register char *);
+char **bsdglob (register char *);
 
 #endif /* _FSP_BSD_EXTERN_H_ */
